@@ -4,8 +4,9 @@
 
 === 1.0.1 ===
 
-- Fixed bugs in construct()/destroy() method pairs for several DSP modules.
-- Added denial of copy constructors for all DSP units.
+* Fixed bugs in construct()/destroy() method pairs for several DSP modules.
+* Added denial of copy constructors for all DSP units.
+* Updated build scripts.
 
 === 1.0.0 ===
 * Added MLS noise generator.
